# Cloud-Pararell-ARS-Executer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  insomnia.json  package.json
lambda/: index.js  package.json  test.js
nemesis-executer/: CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake
nemesis-executer/src/: GL900CSVAdapter.cpp  GL900CSVAdapter.hpp  NKF.cpp  NKF.hpp  StatusDefinition.hpp  USTARSSpectrumCSVAdapter.cpp  USTARSSpectrumCSVAdapter.hpp  USignalDataCSVAdapter.cpp  USignalDataCSVAdapter.hpp  main.cpp  test.cpp
nemesis-facade/: app.js  package.json  samconfig.toml  template.yaml
nemesis-front/: package-lock.json  package.json
nemesis-front/public/: index.html
nemesis-front/src/: App.js  App.scss
nemesis-front/src/lib/: apiClient.js  statusDefinition.js  util.js
nemesis-front/src/pages/: AboutPage.js  MainPage.js  WelcomePage.js
src/: ARS.cpp  ARS.hpp  GL900CSVAdapter.cpp  STARS.cpp  STARS.hpp  main.cpp  test.cpp
